# Cinephile

./: .gitignore  CMakeLists.txt  CategoryFilterWidget.h  DashboardWidget.cpp  DashboardWidget.h  HomePage.cpp  HomePage.h  LICENSE  LibraryPageWidget.h  LoginWidget.cpp  LoginWidget.h  MainWindow.h  MovieCard.cpp  MovieCard.h  MovieDetailWidget.cpp  MovieDetailWidget.h  README.md  Theme.h  WatchPage.h  WatchpPage.cpp  app.rc  clickablelabel.h  config.template.json  configmanager.cpp  firestoreservice.cpp  firestoreservice.h  form.ui  genremovieswidget.cpp  main.cpp  mainwindow.cpp  profilepagewidget.cpp  recommendationpagewidget.cpp  recommendationpagewidget.h  resources.qrc  usermanager.h
Code/: CategoryFilterWidget.cpp  DashboardWidget.cpp  DashboardWidget.h  HomePage.cpp  HomePage.h  LibraryPageWidget.cpp  LoginWidget.h  MainWindow.h  MovieDetailWidget.h  Theme.h  WatchPage.cpp  chatbotwidget.cpp  chatbotwidget.h  configmanager.h  genremovieswidget.h  main.cpp  profilepagewidget.h  resources.qrc  usermanager.cpp
